2005-06-26  Steve Langasek <vorlon@debian.org>
	* client/gtk/connect.c, server/gtk/gnocatan-server-gtk.c:
	  Auto-migrate metaserver values from 'gnocatan.debian.net'
	  to 'pioneers.debian.net' (done in a pretty ugly, hard-coded
	  fashion, but this should be just a temporary hack)

2005-06-26  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/data/splash.svg, client/gtk/data/splash.png: Set name to
	Pioneers
	* client/gtk/gui.c: Use the correct splash image
	
2005-06-25  Steve Langasek <vorlon@debian.org>
	* autogen.sh: tested with automake-1.8, so allow the package to
	  be built using that version
	* macros/autogen.sh: fix broken references to configure.in
	  (should now be configure.ac).
	* Makefile.am: drop the dist hook for debian/, it doesn't belong
	  in the tarball
	* configure.ac, rules.make, client/Makefile.am,
	  client/ai/Makefile.am, client/common/Makefile.am,
	  client/gtk/Makefile.am, client/gtk/connect.c,
	  client/gtk/gui.c, client/gtk/data/Makefile.am,
	  client/gtk/data/themes/Makefile.am,
	  client/gtk/data/themes/FreeCIV-like/Makefile.am,
	  client/gtk/data/themes/Iceland/Makefile.am,
	  client/gtk/data/themes/Tiny/Makefile.am,
	  client/help/Makfile.am, client/help/C/Makefile.am,
	  common/Makefile.am, common/gtk/Makefile.am, editor/Makefile.am,
	  meta-server/gnocatan-meta-server.c, server/Makefile.am,
	  server/gnocatan-server-console.c, server/gnocatan-server.c,
	  server/gtk/Makefile.am, server/gtk/gnocatan-server-gtk.c: fix
	  uses of the name "Gnocatan" in the source
	* configure.ac: change the PACKAGE name to "pioneers"
	* configure.ac, client/help/C/gnocatan.xml,
	  meta-server/meta-report: change the default metaserver to
	  pioneers.debian.net
	* client/ai/Makefile.am, client/common/Makefile.am,
	  client/gtk/Makefile.am, common/Makefile.am,
	  common/gtk/Makefile.am, editor/gtk/Makefile.am,
	  meta-server/Makefile.am, server/Makefile.am,
	  server/gtk/Makefile.am: change the names of the binaries being
	  built