@@ -241,7 +241,7 @@ GtkWidget *settings_create_dlg()
 	add_setting_val(table, 3, 1, TYPE_NUM,
 			game_params->num_develop_type[DEVEL_CHAPEL], NULL,
 			TRUE);
-	add_setting_desc(table, 4, 0, _("University of Gnocatan Cards:"));
+	add_setting_desc(table, 4, 0, _("Pioneer University Cards:"));
 	add_setting_val(table, 4, 1, TYPE_NUM,
 			game_params->
 			num_develop_type[DEVEL_UNIVERSITY_OF_CATAN], NULL,
